tempfile/auto_impl/tests/compile-fail/fn_unsafe_method.rs
use auto_impl::auto_impl;


#[auto_impl(Fn)]
trait Foo {
    unsafe fn a(&self);
}


fn main() {}
