tempfile/auto_impl/tests/compile-fail/fn_unsafe_method.stderr
error: the trait 'Foo' cannot be auto-implemented for Fn-traits: unsafe methods are not allowed
 --> $DIR/fn_unsafe_method.rs:6:5
  |
6 |     unsafe fn a(&self);
  |     ^^^^^^
